--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,18 @@
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
 
         // Hilt
         ext.hilt_version = '2.33-beta'
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha11"
+        classpath "com.android.tools.build:gradle:7.0.0-alpha14"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
+
+
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.4.2.0"
 
         // Hilt
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.33-beta"
@@ -19,7 +22,16 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
+
+allprojects {
+    repositories {
+
+    }
+}
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
